Fix invetory column  width issues to make their contents readable

--- a/awx/ui/client/legacy/styles/lists.less
+++ b/awx/ui/client/legacy/styles/lists.less
@@ -588,6 +588,11 @@ table, tbody {
 
 .List-staticColumnLayout--groups {
     display: grid;
+    grid-template-columns: 5px 25px auto;
+}
+
+.List-staticColumnLayout--inventoryGroups {
+    display: grid;
     grid-template-columns: 5px 25px 25px auto;
 }
 
